--- a/app/src/main/res/menu/menu_my_timeline.xml
+++ b/app/src/main/res/menu/menu_my_timeline.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MyTimelineFragment">
+    <item android:id="@+id/menu_refresh"
+        android:orderInCategory="100"
+        android:title="@string/action_refresh"
+        tools:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_settings"
+        android:orderInCategory="101"
+        android:title="@string/action_settings" />
+    <item android:id="@+id/menu_logout"
+        android:orderInCategory="102"
+        android:title="@string/action_sign_out" />
 </menu>
