--- a/app/src/main/res/layout/activity_my_timeline.xml
+++ b/app/src/main/res/layout/activity_my_timeline.xml
@@ -75,6 +75,7 @@
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:id="@+id/share_tweet"
+                            android:clickable="true"
                             android:layout_marginLeft="20dp"
                             android:layout_gravity="center_vertical"
                             android:src="@drawable/ic_share"/>
