--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,23 +2,30 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <SwitchPreference
-        android:defaultValue="true"
-        android:key="example_switch"
-        android:summary="@string/pref_description_social_recommendations"
-        android:title="@string/pref_title_social_recommendations" />
+    <PreferenceCategory android:title="@string/pref_timeline_setting" >
 
+        <com.example.android.twittercopycat.NumberPickerPreference
+            android:key="numberOfTweets"
+            android:title="@string/pref_number_of_tweets"
+            android:summary="@string/pref_summary_number_of_tweets"
+            android:defaultValue="5" />
 
+    </PreferenceCategory>
 
-    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-         dismiss it. -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-    <ListPreference
-        android:defaultValue="-1"
-        android:entries="@array/pref_example_list_titles"
-        android:entryValues="@array/pref_example_list_values"
-        android:key="example_list"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null"
-        android:title="@string/pref_title_add_friends_to_messages" />
+    <PreferenceCategory android:title="@string/pref_update_setting" >
+
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="wifiOnlySwitch"
+            android:summary="@string/pref_description_wifi_only"
+            android:title="@string/pref_wifi_only" />
+
+        <ListPreference
+            android:defaultValue="15"
+            android:key="prefSyncFrequency"
+            android:entries="@array/syncFrequency"
+            android:entryValues="@array/syncFrequencyValues"
+            android:summary="@string/pref_sync_frequency_summary"
+            android:title="@string/pref_sync_frequency" />
+    </PreferenceCategory>
 </PreferenceScreen>
