--- a/app/src/main/res/xml/preferences_frag.xml
+++ b/app/src/main/res/xml/preferences_frag.xml
@@ -5,24 +5,24 @@
     <PreferenceCategory android:title="@string/pref_timeline_setting" >
 
         <com.example.android.twittercopycat.NumberPickerPreference
-            android:key="numberOfTweets"
+            android:key="prefNumberOfTweets"
+            android:defaultValue="5"
             android:title="@string/pref_number_of_tweets"
-            android:summary="@string/pref_summary_number_of_tweets"
-            android:defaultValue="5" />
+            android:summary="@string/pref_summary_number_of_tweets" />
 
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/pref_update_setting" >
 
         <SwitchPreference
-            android:defaultValue="true"
-            android:key="wifiOnlySwitch"
+            android:key="prefWifiOnlySwitch"
+            android:defaultValue="false"
             android:summary="@string/pref_description_wifi_only"
             android:title="@string/pref_wifi_only" />
 
         <ListPreference
-            android:defaultValue="15"
             android:key="prefSyncFrequency"
+            android:defaultValue="15"
             android:entries="@array/syncFrequency"
             android:entryValues="@array/syncFrequencyValues"
             android:summary="@string/pref_sync_frequency_summary"
