organized whole structure of the app

--- a/app/src/main/res/layout/activity_my_timeline.xml
+++ b/app/src/main/res/layout/activity_my_timeline.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyTimelineScreen"
+    tools:context=".screens.MyTimelineScreen"
     android:orientation="vertical">
 
         <RelativeLayout
@@ -90,7 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@id/tweetField"
-                tools:context=".PublicTimelineScreen"
+                tools:context=".screens.PublicTimelineScreen"
                 tools:ignore="MergeRootFrame" />
 
         </RelativeLayout>
