--- a/app/src/main/res/menu/menu_my_timeline.xml
+++ b/app/src/main/res/menu/menu_my_timeline.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MyTimelineFragment">
+    tools:context=".fragments.MyTimelineFragment">
     <item android:id="@+id/menu_refresh"
         android:orderInCategory="100"
         android:title="@string/action_refresh"
