--- a/app/src/main/res/layout/activity_detail_screen.xml
+++ b/app/src/main/res/layout/activity_detail_screen.xml
@@ -76,9 +76,9 @@
                 android:id="@+id/textView_id" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:gravity="right"
                 android:text="2016 March, 16th "
                 android:id="@+id/textView_date" />
         </LinearLayout>
