--- a/app/src/main/res/layout/list_item_public_tweet.xml
+++ b/app/src/main/res/layout/list_item_public_tweet.xml
@@ -8,6 +8,17 @@
     android:padding= "20dp"
     android:minHeight="?android:attr/listPreferredItemHeight">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Android não é pêra doce"
+        android:padding="1dp"
+        android:textSize="20dp"
+        android:id="@+id/list_item_tweet_text"/>
+</LinearLayout>
+
+<!--
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +39,8 @@
             android:text="2016, 16 March"
             android:layout_weight="1"
             android:padding="1dp"
-            android:textSize="20dp"
+            android:gravity="right"
+            android:textSize="10dp"
             android:id="@+id/list_item_tweet_date"/>
     </LinearLayout>
 
@@ -38,4 +50,4 @@
         android:text="Android não é pêra doce"
         android:padding="1dp"
         android:id="@+id/list_item_tweet_text"/>
-</LinearLayout>
+-->
