--- a/app/src/main/res/xml/tccwidget_info.xml
+++ b/app/src/main/res/xml/tccwidget_info.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/tccwidget"
-    android:initialLayout="@layout/tccwidget"
-    android:minHeight="110dp"
-    android:minWidth="250dp"
+    android:initialKeyguardLayout="@layout/tcc_widget"
+    android:initialLayout="@layout/tcc_widget"
+    android:minWidth="146dip"
+    android:minHeight="146dip"
+    android:updatePeriodMillis="30000"
+    android:autoAdvanceViewId="@+id/words"
+    android:resizeMode="vertical"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
