--- a/app/src/main/res/layout/tweet_widget_view.xml
+++ b/app/src/main/res/layout/tweet_widget_view.xml
@@ -15,10 +15,9 @@
 -->
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+    android:id="@+id/widget_list_text_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/black_overlay"
     android:textAppearance="?android:attr/textAppearanceLarge"
     android:gravity="center_vertical"
     android:paddingLeft="6dip"
